[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Djura Smits <djura.smits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
clize = "^5.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
